--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,9 @@ setw -g window-status-attr reverse
 # Info on left (I don't have a session display for now)
 set -g status-left ''
 
+# don't rename windows automatically
+set-option -g allow-rename off
+
 # loud or quiet?
 set-option -g visual-activity off
 set-option -g visual-bell off
@@ -182,3 +185,12 @@ set -g @shell_mode 'vi'
 set -g @yank_selection 'primary'
 
 run-shell '~/.tmux/plugins/tpm/tpm'
+
+# Smart pane switching with awareness of vim splits
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
