--- a/.config/i3/config
+++ b/.config/i3/config
@@ -52,7 +52,7 @@ bindsym $mod+q kill
 
 # start rofi (a program launcher)
 #bindsym $mod+p exec rofi -show run -lines 4 -eh 2  -width 1024 -padding 626 -opacity 60 -o
-bindsym $mod+p exec rofi -show run -lines 4 -eh 2  #-width 1024 -padding 626 -opacity 60 -o
+bindsym $mod+p exec rofi -show run -lines 6 -eh 2  #-width 1024 -padding 626 -opacity 60 -o
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -119,16 +119,16 @@ set $workspace7 " VII"
 set $workspace8 " VIII"
 set $workspace9 " IX"
 
-for_window [class="URxvt" instance="3a"] floating toggle
-exec --no-startup-id i3-msg 'workspace ; exec urxvt -name 3a -g 80x23+480+380'
-for_window [class="URxvt" instance="3b"] floating toggle
-exec --no-startup-id i3-msg 'workspace ; exec urxvt -name 3b -g 80x23+1305+380 -e ncmpcpp'
-for_window [class="URxvt" instance="3c"] floating toggle
-exec --no-startup-id i3-msg 'workspace ; exec urxvt -name 3c -g 80x23+480+840 -e htop'
-for_window [class="URxvt" instance="3d"] floating toggle
-exec --no-startup-id i3-msg 'workspace ; exec urxvt -name 3d -g 80x23+1305+840 -e ranger'
-for_window [class="URxvt" instance="3e"] floating toggle
-exec --no-startup-id i3-msg 'workspace ; exec urxvt -name 3e -g 30x1+1805+315'
+#for_window [class="URxvt" instance="3a"] floating toggle
+#exec --no-startup-id i3-msg 'workspace ; exec urxvt -name 3a -g 80x23+480+380'
+#for_window [class="URxvt" instance="3b"] floating toggle
+#exec --no-startup-id i3-msg 'workspace ; exec urxvt -name 3b -g 80x23+1305+380 -e ncmpcpp'
+#for_window [class="URxvt" instance="3c"] floating toggle
+#exec --no-startup-id i3-msg 'workspace ; exec urxvt -name 3c -g 80x23+480+840 -e htop'
+#for_window [class="URxvt" instance="3d"] floating toggle
+#exec --no-startup-id i3-msg 'workspace ; exec urxvt -name 3d -g 80x23+1305+840 -e ranger'
+#for_window [class="URxvt" instance="3e"] floating toggle
+#exec --no-startup-id i3-msg 'workspace ; exec urxvt -name 3e -g 30x1+1805+315'
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -298,7 +298,7 @@ bindsym XF86AudioPrev exec playerctl previous
 # Start up
 
 exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/dwm-wallpaper/Desktop-pictures-pokemon-wallpapers-pokemon-wallpaper-image-28.jpg
-exec --no-startup-id yabar
+#exec --no-startup-id yabar
 exec_always compton -f
-exec --no-startup-id pulseaudio --start
-exec --no-startup-id dropbox
+#exec --no-startup-id pulseaudio --start
+#exec --no-startup-id dropbox
