--- a/.config/i3/config
+++ b/.config/i3/config
@@ -245,8 +245,9 @@ bar {
         }
         position top
         #status_command i3status
-        status_command i3status -c ~/.config/i3/i3status.conf
-        #status_command i3blocks -c ~/.config/i3/i3blocks/config
+        #status_command lemonbar
+        #status_command i3status -c ~/.config/i3/i3status.conf
+        status_command i3blocks -c ~/.config/i3/i3blocks/i3blocks.conf
 }
 
 # Colors
