--- a/.config/i3/i3status.conf
+++ b/.config/i3/i3status.conf
@@ -1,57 +1,61 @@
-# i3status configuration file.
-# see "man i3status" for documentation.
+#   ░▀█▀░▀▀█░█▀▀░▀█▀░█▀█░▀█▀░█░█░█▀▀
+#   ░░█░░░▀▄░▀▀█░░█░░█▀█░░█░░█░█░▀▀█
+#   ░▀▀▀░▀▀░░▀▀▀░░▀░░▀░▀░░▀░░▀▀▀░▀▀▀
 
-# It is important that this file is edited as UTF-8.
-# The following line should contain a sharp s:
-# ß
-# If the above line is not correctly displayed, fix your editor first!
 
 general {
-        colors = true
+        output_format = "i3bar"
         interval = 1
+        colors = true
+        color_good = "#769070"
+        color_degraded = "#60867f"
+        color_bad = "#c96666"
 }
 
-#order += "ipv6"
+order += "cpu_usage"
 order += "disk /"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
-order += "wireless _first_"
-order += "ethernet _first_"
+order += "ethernet eth0"
+order += "wireless wlan0"
+order += "volume master"
 order += "battery 0"
-order += "load"
 order += "tztime local"
 
-wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+ethernet eth0{
+        format_up = " eth0 %ip %speed"
+        format_down = " eth0 Not Connected "
 }
 
-ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+wireless wlan0 {
+        format_up = " wlan0  %essid "
+        format_down = " wlan0 Not Connected "
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
-}
-
-run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
-}
-
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+        format = "%status %percentage "
+        low_threshold = 11
+        threshold_type = percentage
+        status_chr = "  "
+        status_bat = "  "
+        status_full = "  "
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = " %Y-%m-%d %I.%M.%S "
 }
 
-load {
-        format = "%1min"
+cpu_usage {
+    format = "  CPU: %usage"
 }
 
 disk "/" {
-        format = "%avail"
+        format = " /  %avail of %total avail "
+            prefix_type = custom
+}
+
+volume master {
+        format = "   %volume "
+        format_muted = "   %volume "
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
