--- a/.config/i3/i3blocks/i3blocks.conf
+++ b/.config/i3/i3blocks/i3blocks.conf
@@ -109,7 +109,7 @@ label=BAT
 #label=⚡
 #instance=1
 interval=1
-color=#fff200
+color=#e71ac9
 
 # Date Time
 #
@@ -141,7 +141,7 @@ color=#c5ffe9
 # see the script for details.
 #[temperature]
 #label=TEMP
-#interval=10
+#interval=1
 
 # Key indicators
 #
