--- a/.config/i3/config
+++ b/.config/i3/config
@@ -301,6 +301,7 @@ bindsym XF86AudioPrev exec playerctl previous
 # Start up
 
 exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/dwm-wallpaper/Desktop-pictures-pokemon-wallpapers-pokemon-wallpaper-image-28.jpg
+exec --no-startup-id setxkbmap -option ctrl:swapcaps
 #exec --no-startup-id yabar
 exec_always compton -f
 #exec --no-startup-id pulseaudio --start
