--- a/.config/i3/i3blocks/i3blocks.conf
+++ b/.config/i3/i3blocks/i3blocks.conf
@@ -40,7 +40,7 @@ instance=Master
 #instance=PCM
 interval=once
 signal=10
-color=#f9a114
+#color=#f9a114
 
 # Memory usage
 #
@@ -49,14 +49,14 @@ color=#f9a114
 label=MEM
 separator=false
 interval=1
-color=#1ad06e
+#color=#1ad06e
 
 [memory]
 label=SWAP
 instance=swap
 separator=false
 interval=1
-color=#00c3ff
+#color=#00c3ff
 
 # Disk usage
 #
@@ -96,7 +96,7 @@ label=CPU
 interval=1
 min_width=CPU: 100.00%
 #separator=false
-color=#f0bfa5
+#color=#f0bfa5
 
 #[load_average]
 #interval=10
@@ -109,14 +109,14 @@ label=BAT
 #label=⚡
 #instance=1
 interval=1
-color=#e71ac9
+#color=#e71ac9
 
 # Date Time
 #
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
 interval=1
-color=#c5ffe9
+#color=#c5ffe9
 
 
 # Generic media player support
