--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -2,3 +2,5 @@
 gtk-application-prefer-dark-theme=1
 gtk-theme-name=Adapta
 gtk-icon-theme-name=Numix-Circle
+gtk-recent-files-max-age=0
+gtk-recent-files-limit=0
