--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ set -g base-index 1         # start windows numbering at 1
 setw -g pane-base-index 1   # make pane numbering consistent with windows
 
 setw -g automatic-rename on # rename window to reflect current program
-set -g renumber-windows on  # renumber windows when a window is closed
+set -g renumber-windows off  # renumber windows when a window is closed
 
 set -g set-titles on                        # set terminal title
 set -g set-titles-string '#h ❐ #S ● #I #W'
@@ -46,7 +46,7 @@ set -g set-titles-string '#h ❐ #S ● #I #W'
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
 
-set -g status-interval 10     # redraw status line every 10 seconds
+set -g status-interval 1     # redraw status line every 10 seconds
 
 # clear both screen and history
 bind -n C-l send-keys C-l \; run 'sleep 0.05 && tmux clear-history'
@@ -70,10 +70,10 @@ bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
 # pane resizing
-bind -r H resize-pane -L 2
-bind -r J resize-pane -D 2
-bind -r K resize-pane -U 2
-bind -r L resize-pane -R 2
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 # window navigation
 unbind n
