--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,6 +57,8 @@ bind -n C-l send-keys C-l \; run 'sleep 0.05 && tmux clear-history'
 set -g monitor-activity on
 set -g visual-activity off
 
+bind | split-window -h
+bind - split-window -v
 
 # -- navigation ----------------------------------------------------------------
 
