--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,7 +40,7 @@ setw -g pane-base-index 1   # make pane numbering consistent with windows
 
 setw -g automatic-rename on # rename window to reflect current program
 set -g renumber-windows off  # renumber windows when a window is closed
-set-option -g allow-rename on
+set-option -g allow-rename off
 
 set -g set-titles on                        # set terminal title
 set -g set-titles-string '#h ❐ #S ● #I #W'
