--- a/.config/i3/config
+++ b/.config/i3/config
@@ -231,35 +231,38 @@ client.background       $UNFOCUS
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        colors{
-            #background #000000
-            #background #777777
-            #background #696969
-            background #3e3e3e
-            statusline #ffffff
-            separator #666666
-
-            focused_workspace #008fff #007fff #ffffff
-            active_workspace #333333 #5f676a #ffffff
-            inactive_workspace #333333 #222222 #888888
-            urgent_workspace #aa0000 #990000 #ffffff
-
-            #background  $COLOR_BLACK
-            #statusline  $COLOR_BLUE
-
-            # Colors            border           backgr.          text
-            #focused_workspace   $COLOR_BLACK     $COLOR_BLACK     $COLOR_PINK
-            #active_workspace    $COLOR_BLACK     $COLOR_BLACK     $COLOR_PINK
-            #inactive_workspace  $COLOR_BLACK     $COLOR_BLACK     $COLOR_WHITE
-            #urgent_workspace    $COLOR_PINK      $COLOR_PINK      $COLOR_WHITE
-        }
-        position top
-        #status_command i3status
-        #status_command lemonbar
-        #status_command i3status -c ~/.config/i3/i3status.conf
-        status_command i3blocks -c ~/.config/i3/i3blocks/i3blocks.conf
-}
+###########################
+### Old i3blocks config ###
+###########################
+#bar {
+#        colors{
+#            #background #000000
+#            #background #777777
+#            #background #696969
+#            background #3e3e3e
+#            statusline #ffffff
+#            separator #666666
+#
+#            focused_workspace #008fff #007fff #ffffff
+#            active_workspace #333333 #5f676a #ffffff
+#            inactive_workspace #333333 #222222 #888888
+#            urgent_workspace #aa0000 #990000 #ffffff
+#
+#            #background  $COLOR_BLACK
+#            #statusline  $COLOR_BLUE
+#
+#            # Colors            border           backgr.          text
+#            #focused_workspace   $COLOR_BLACK     $COLOR_BLACK     $COLOR_PINK
+#            #active_workspace    $COLOR_BLACK     $COLOR_BLACK     $COLOR_PINK
+#            #inactive_workspace  $COLOR_BLACK     $COLOR_BLACK     $COLOR_WHITE
+#            #urgent_workspace    $COLOR_PINK      $COLOR_PINK      $COLOR_WHITE
+#        }
+#        position top
+#        #status_command i3status
+#        #status_command lemonbar
+#        #status_command i3status -c ~/.config/i3/i3status.conf
+#        status_command i3blocks -c ~/.config/i3/i3blocks/i3blocks.conf
+#}
 
 # Colors
 set $base00 #1d1f21
@@ -291,7 +294,7 @@ hide_edge_borders both
 
 # Other Keybindings
 
-bindsym $mod+shift+x exec i3lock-fancy -g -f Office Source Code Pro
+# bindsym $mod+shift+x exec i3lock-fancy -g -f Office Source Code Pro
 # bindsym $mod+u exec scrot
 # bindsym $mod+z exec xrdb ~/.Xresources
 
@@ -318,4 +321,5 @@ exec --no-startup-id dropbox start
 exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/wallpaper/0dWI3hG.jpg
 exec --no-startup-id setxkbmap -option ctrl:swapcaps
 exec --no-startup-id wicd -gtk -t
+exec --no-startup-id ~/.config/i3/polybar/launch.sh
 exec_always compton -Cf --config ~/.config/i3/compton.conf
