--- a/.config/i3/polybar/config
+++ b/.config/i3/polybar/config
@@ -45,9 +45,9 @@
     tray-position = right
     tray-maxsize  = 28
 
-    modules-right  = lan wlan date
+    modules-right  = lan wlan filesystem date
     ;modules-center = i3
-    modules-left   = shutdown reboot lock
+    modules-left   = shutdown reboot lock i3
 
     enable-ipc = true
 ;;;}
@@ -57,11 +57,12 @@
 
     interval = 1.0
 
-    date     = %%{F#90477893}%d-%M-%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
+    date     = %%{F#477893}%d/%M/%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
+    ;date     = %%{F#90477893}%d-%M-%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
     ;date     = %%{F#FBA922}%A%%{F#FF}, %d %B %Y  %H:%M:%S
 
     format =   <date>
-    format-foreground = ${colors.color4}
+    format-foreground = ${colors.color2}
 ;;;}
 
 ;[module/xtitle]
@@ -77,94 +78,34 @@
 [module/i3];;;{
     type   = internal/i3
 
-    ;;;; Only show workspaces defined on the same output as the bar
-    ;;;;
-    ;;;; Useful if you want to show monitor specific workspaces
-    ;;;; in different bars
-    ;;;;
-    ;;;; Default: false
-    ;;;pin-workspaces = true
+    format = <label-state>
 
-    ;;;; This will split the workspace name on ':'
-    ;;;; Default: false
-    ;;;strip-wsnumbers = false
-
-    ;;;; Limit the amount of chars to output for each workspace name
-    ;;;; Default: 0
-    ;;;wsname-maxlen = 0
-
-    ;;;; Sort the workspaces by index instead of the default
-    ;;;; sorting that groups the workspaces by output
-    ;;;; Default: false
-    ;;;index-sort = true
-
-    ;;;; Create click handler used to focus workspace
-    ;;;; Default: true
-    ;;;enable-click = true
-
-    ;;;; Create scroll handlers used to cycle workspaces
-    ;;;; Default: true
-    ;;;enable-scroll = true
-
-    ;;;; ws-icon-[0-9]+ = label;icon
-    ;;;ws-icon-0 = 1;♚
-    ;;;ws-icon-1 = 2;♛
-    ;;;ws-icon-2 = 3;♜
-    ;;;ws-icon-3 = 4;♝
-    ;;;ws-icon-4 = 5;♞
-    ;;;ws-icon-default = ♟
-
-    ;;;; Available tags:
-    ;;;;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
-    ;;;;format = <label-state>
-
-    ; Available tokens:
-    ;   %name%
-    ;   %icon%
-    ;   %index%
-    ;   %output%
-    ; Default: %icon%  %name%
-    ;label-focused = %index%
-    label-focused-foreground = #ffffff
-    ;label-focused-background = #3f3f3f
-    ;label-focused-background = #665c54
-    label-focused-background = #008fff
-    label-focused-underline = #fba922
-    label-focused-padding = 4
-
-    ;;;; Available tokens:
-    ;;;;   %name%
-    ;;;;   %icon%
-    ;;;;   %index%
-    ;;;; Default: %icon%  %name%
-    ;label-unfocused = %index%
-    label-unfocused-padding = 4
-
-    ;;;; Available tokens:
-    ;;;;   %name%
-    ;;;;   %icon%
-    ;;;;   %index%
-    ;;;; Default: %icon%  %name%
-    label-visible = %index%
-    label-visible-underline = #555555
-    label-visible-padding = 4
-
-    ;;;; Available tokens:
-    ;;;;   %name%
-    ;;;;   %icon%
-    ;;;;   %index%
-    ;;;; Default: %icon%  %name%
-    label-urgent = %index%
-    label-urgent-foreground = #000000
-    label-urgent-background = #bd2c40
-    label-urgent-padding = 4
-
-    ;format = <label-state>
     enable-click = true
     enable-scroll = true
     index-sort = true
-    pin-workspaces = true
-    strip-wsnumbers = false
+    ;pin-workspaces = true
+    ;strip-wsnumbers = false
+
+    ;label-focused = %index%
+    label-focused-background = #008fff
+    label-focused-foreground = #ffffff
+    label-focused-padding = 4
+    ;label-focused-underline = #fba922
+
+    ;label-unfocused = %index%
+    ;label-unfocused-background = 
+    label-unfocused-foreground = ${colors.color4}
+    label-unfocused-padding = 4
+
+    ;label-urgent = %index%!
+    label-urgent-background = #bd2c40
+    label-urgent-foreground = #000000
+    label-urgent-padding = 4
+
+    ;label-visible = %index%
+    label-visible-padding = 4
+    label-visible-foreground = #55
+    ;label-visible-underline = #555555
 
     ;label-focused            = %icon%
     ;label-focused-foreground = ${colors.color2}
@@ -186,6 +127,22 @@
     ;ws-icon-default = 
 ;;;}
 
+[module/filesystem];;;{
+    type = internal/fs
+    interval = 25
+
+    mount-0 = /
+    ;mount-1 = /home
+    ;mount-2 = /invalid/mountpoint
+
+    ;fixed-values = true
+    spacing = 4
+
+    label-mounted = %mountpoint% %free%
+
+    label-unmounted = %mountpoint%: not mounted
+    label-unmounted-foreground = #55
+;;;}
 
 [module/battery];;;{
     type = internal/battery
@@ -198,6 +155,8 @@
     format-discharging = <ramp-capacity> <label-discharging>
 
     format-foreground = ${colors.color4}
+    format-charging-foreground = ${colors.color4}
+    format-discharging-foreground = ${colors.color4}
     label-charging =  %percentage%
 
     ramp-capacity-0 = 
