--- a/.config/i3/config
+++ b/.config/i3/config
@@ -56,7 +56,7 @@ bindsym $mod+q kill
 
 # start rofi (a program launcher)
 #bindsym $mod+p exec rofi -show run -lines 4 -eh 2  -width 1024 -padding 626 -opacity 60 -o
-bindsym $mod+p exec rofi -show run -lines 6 -eh 2  #-width 1024 -padding 626 -opacity 60 -o
+bindsym $mod+p exec rofi -show run -lines 6 -eh 2 &
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
