--- a/.config/i3/i3blocks/i3blocks.conf
+++ b/.config/i3/i3blocks/i3blocks.conf
@@ -106,15 +106,14 @@ min_width=CPU: 100.00%
 # The battery instance defaults to 0.
 [battery]
 label=BAT
-#label=⚡
-#instance=1
 interval=1
+markup=pango
 #color=#e71ac9
 
 # Date Time
 #
 [time]
-command=date '+%Y-%m-%d %H:%M:%S'
+command=date '+%Y/%m/%d %H:%M:%S'
 interval=1
 #color=#c5ffe9
 
