--- a/.config/i3/polybar/config
+++ b/.config/i3/polybar/config
@@ -58,8 +58,8 @@
 
     interval = 1.0
 
-    date     = %%{F#477893}%d/%M/%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
-    ;date     = %%{F#90477893}%d-%M-%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
+    date     = %%{F#477893}%d/%m/%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
+    ;date     = %%{F#90477893}%d-%m-%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
     ;date     = %%{F#FBA922}%A%%{F#FF}, %d %B %Y  %H:%M:%S
 
     format =   <date>
