--- a/.config/i3/config
+++ b/.config/i3/config
@@ -316,11 +316,11 @@ bindsym XF86AudioPrev exec playerctl previous
 #exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/wallpaper/Desktop-pictures-pokemon-wallpapers-pokemon-wallpaper-image-28.jpg
 #exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/wallpaper/gfoHjw6.jpg
 #exec --no-startup-id pulseaudio --start
+#exec --no-startup-id setxkbmap -option ctrl:swapcaps
 #exec --no-startup-id yabar
 exec --no-startup-id dropbox start
 exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/wallpaper/0dWI3hG.jpg
-exec --no-startup-id setxkbmap -option ctrl:swapcaps
 exec --no-startup-id wicd -gtk -t
-exec --no-startup-id xset r rate 200 40
+exec --no-startup-id xset r rate 200 60
 exec --no-startup-id ~/.config/i3/polybar/launch.sh
 exec_always compton -Cf --config ~/.config/i3/compton.conf
