--- a/.config/i3/polybar/config
+++ b/.config/i3/polybar/config
@@ -1,363 +1,378 @@
-[colors];;;{
-    ;background = #282828
-    background = #3c3836
+[colors]
+;background = #282828
+;color1     = #955540
+;color2     = #477893
+;color3     = #BC832C
+background  = #3c3836
+color1      = #e74c3c
+color1l     = #40955540
+color2      = #2980b9
+color2l     = #40477893
+color3      = #f39c12
+color3l     = #40BC832C
+color4      = #689d6a
+color4l     = #8ec07c
 
-    ;color1  = #955540
-    color1 = #e74c3c
-    color1l = #40955540
 
-    ;color2  = #477893
-    color2  = #2980b9
-    color2l = #40477893
 
-    ;color3  = #BC832C
-    color3  = #f39c12
-    color3l = #40BC832C
+[bars]
+bar_fill  = ●
+bar_empty = ○
 
-    color4 = #689d6a
-    color4l = #8ec07c
-;;;}
-
-[bars];;;{
-    bar_fill = ●
-    bar_empty = ○
-;;;}
 
-[bar/top_bar];;;{
-    monitor = LVDS1 
-    ;monitor = HDMI1
 
-    width  = 100%
-    height = 20
+[bar/top_bar]
+monitor  = LVDS1
+;monitor = HDMI1
 
-    background = ${colors.background}
-    foreground = ${colors.color1}
+spacing = 4
+width  = 100%
+height = 20
 
-    padding-left  = 1
-    padding-right = 1
+background = ${colors.background}
+foreground = ${colors.color1}
 
-    top = true
+padding-left  = 1
+padding-right = 1
 
-    font-0 = Hack:style=Regular:size=8:dpi=138;0
-    font-1 = FontAwesome:size=8:dpi=138;0
+top = true
 
-    tray-background = ${colors.background}
-    tray-position = right
-    tray-maxsize  = 28
+font-0 = Hack:style=Regular:size=8:dpi=138;0
+font-1 = FontAwesome:size=8:dpi=138;0
 
-    ;modules-right  = lan wlan filesystem date
-    modules-right  = filesystem date
-    ;modules-center = i3
-    modules-left   = shutdown reboot lock i3
+tray-background = ${colors.background}
+tray-position   = right
+tray-maxsize    = 28
 
-    enable-ipc = true
-;;;}
+;modules-right  = lan wlan filesystem date
+modules-right   = filesystem date
+;modules-center = i3
+modules-left    = shutdown reboot lock i3
 
-[module/date];;;{
-    type = internal/date
+enable-ipc = true
 
-    interval = 1.0
 
-    date     = %%{F#477893}%d/%m/%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
-    ;date     = %%{F#90477893}%d-%m-%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
-    ;date     = %%{F#FBA922}%A%%{F#FF}, %d %B %Y  %H:%M:%S
 
-    format =   <date>
-    format-foreground = ${colors.color2}
-;;;}
+[module/date]
+type = internal/date
 
-[module/i3];;;{
-    type   = internal/i3
+interval = 1.0
 
-    format = <label-state>
+date     = %%{F#477893}%d/%m/%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
+;date     = %%{F#90477893}%d-%m-%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
+;date     = %%{F#FBA922}%A%%{F#FF}, %d %B %Y  %H:%M:%S
 
-    enable-click = true
-    enable-scroll = true
-    index-sort = true
-    ;pin-workspaces = true
-    ;strip-wsnumbers = false
+format            =   <date>
+format-foreground = ${colors.color2}
 
-    ;label-focused = %index%
-    label-focused-background = #008fff
-    label-focused-foreground = #ffffff
-    label-focused-padding = 4
-    ;label-focused-underline = #fba922
 
-    ;label-unfocused = %index%
-    ;label-unfocused-background = 
-    label-unfocused-foreground = ${colors.color4}
-    label-unfocused-padding = 4
 
-    ;label-urgent = %index%!
-    label-urgent-background = #bd2c40
-    label-urgent-foreground = #000000
-    label-urgent-padding = 4
+[module/i3]
+type   = internal/i3
 
-    ;label-visible = %index%
-    label-visible-padding = 4
-    label-visible-foreground = #55
-    ;label-visible-underline = #555555
+format = <label-state>
 
-    ;label-focused            = %icon%
-    ;label-focused-foreground = ${colors.color2}
-    ;label-focused-padding    = 2
+enable-click  = true
+enable-scroll = true
+index-sort    = true
+;pin-workspaces = true
+;strip-wsnumbers = false
 
-    ;label-unfocused            = %icon%
-    ;label-unfocused-foreground = ${colors.color2l}
-    ;label-unfocused-padding    = 1
+;label-focused = %index%
+label-focused-background = #008fff
+label-focused-foreground = #ffffff
+label-focused-padding    = 4
+;label-focused-underline = #fba922
 
-    ;label-urgent            = %icon%
-    ;label-urgent-foreground = ${colors.color3}
-    ;label-urgent-padding    = 1
+;label-unfocused = %index%
+;label-unfocused-background =
+label-unfocused-foreground  = ${colors.color4}
+label-unfocused-padding     = 4
 
-    ;ws-icon-0 = 1; term
-    ;ws-icon-1 = 2; www
-    ;ws-icon-2 = 3; code
-    ;ws-icon-3 = 4; andr
-    ;ws-icon-4 = 5; tgrm
-    ;ws-icon-default = 
-;;;}
+;label-urgent = %index%!
+label-urgent-background = #bd2c40
+label-urgent-foreground = #000000
+label-urgent-padding    = 4
 
-[module/filesystem];;;{
-    type = internal/fs
-    interval = 25
+;label-visible = %index%
+label-visible-padding    = 4
+label-visible-foreground = #55
+;label-visible-underline = #555555
 
-    mount-0 = /
-    ;mount-1 = /home
-    ;mount-2 = /invalid/mountpoint
+;label-focused            = %icon%
+;label-focused-foreground = ${colors.color2}
+;label-focused-padding    = 2
 
-    ;fixed-values = true
-    spacing = 4
+;label-unfocused            = %icon%
+;label-unfocused-foreground = ${colors.color2l}
+;label-unfocused-padding    = 1
 
-    label-mounted = %mountpoint% %free%
+;label-urgent            = %icon%
+;label-urgent-foreground = ${colors.color3}
+;label-urgent-padding    = 1
 
-    label-unmounted = %mountpoint%: not mounted
-    label-unmounted-foreground = #55
-;;;}
+;ws-icon-0 = 1; term
+;ws-icon-1 = 2; www
+;ws-icon-2 = 3; code
+;ws-icon-3 = 4; andr
+;ws-icon-4 = 5; tgrm
+;ws-icon-default = 
 
-[module/battery];;;{
-    type = internal/battery
 
-    battery = BAT1
-    adapter = ADP1
 
-    padding-left = 2
-    format-charging = <ramp-capacity> <label-charging>
-    format-discharging = <ramp-capacity> <label-discharging>
-    format-full = <ramp-capacity> <label-full>
+[module/filesystem]
+type = internal/fs
+interval = 25
 
-    format-foreground = ${colors.color4}
-    format-charging-foreground = ${colors.color4}
-    format-discharging-foreground = ${colors.color4}
-    format-full-foreground = ${colors.color4}
+mount-0 = /
+;mount-1 = /home
+;mount-2 = /invalid/mountpoint
 
-    label-charging =  %percentage%
-    label-full =  %percentage%
+;fixed-values = true
+spacing = 4
 
-    ramp-capacity-0 = 
-    ramp-capacity-1 = 
-    ramp-capacity-2 = 
-    ramp-capacity-3 = 
-    ramp-capacity-4 = 
-;;;}
+label-mounted = %mountpoint% %free%
 
-[bar/bottom_bar];;;{
-    monitor = LVDS1
-    #monitor = HDMI1
+label-unmounted = %mountpoint%: not mounted
+label-unmounted-foreground = #55
 
-    width  = 100%
-    height = 25
 
-    bottom = true
 
-    font-0 = ${bar/top_bar.font-0}
-    font-1 = ${bar/top_bar.font-1}
+[module/battery]
+type = internal/battery
 
-    background = ${colors.background}
-    foreground = ${colors.color1}
+battery = BAT1
+adapter = ADP1
 
-    padding-left = 2
-    padding-right = 2
+poll-interval = 5
 
-    modules-right  = lan
-    modules-center = volume memory cpu cpu_temp battery
-    modules-left   = wlan
+padding-left       = 2
+format-charging    = <ramp-capacity> <label-charging>
+format-discharging = <ramp-capacity> <label-discharging>
+format-full        = <ramp-capacity> <label-full>
 
-    enable-ipc = true
-;;;}
+format-foreground             = ${colors.color4}
+format-charging-foreground    = ${colors.color4}
+format-discharging-foreground = ${colors.color4}
+format-full-foreground        = ${colors.color4}
 
-[module/lan];;;{
-    type = internal/network
-    interface = enp3s0
+label-charging =  %percentage%
+label-full     =  %percentage%
 
-    padding-left = 2
-    padding-right = 2
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
-    label-disconnected = %ifname% not connected
 
-    label-connected-foreground = ${colors.color3}
-    label-disconnected-foreground = ${colors.color3l}
-;;;}
 
-[module/wlan];;;{
-    type = internal/network
-    interface = wlp2s0
+[bar/bottom_bar]
+monitor  = LVDS1
+#monitor = HDMI1
 
-    padding-left = 2
-    padding-right = 2
+spacing = 4
+width  = 100%
+height = 25
 
-    label-disconnected = %ifname% not connected
+bottom = true
 
-    label-connected-foreground = ${colors.color3}
-    label-disconnected-foreground = ${colors.color3l}
-;;;}
+font-0 = ${bar/top_bar.font-0}
+font-1 = ${bar/top_bar.font-1}
 
-[module/cpu_temp];;;{
-    type = internal/temperature
-    interval = 1
+background = ${colors.background}
+foreground = ${colors.color1}
 
-    thermal-zone = 0
+padding-left  = 2
+padding-right = 2
 
-    padding-left = 4
+modules-right  = lan
+modules-center = volume memory cpu cpu_temp battery
+modules-left   = wlan
 
-    format      = <ramp> <label>
-    ;format-warn = <ramp> <label>
+enable-ipc = true
 
-    label-warn-foreground = ${colors.color1}
 
-    ramp-0 = 
-    ramp-1 = 
-    ramp-2 = 
-;;;}
 
-[module/cpu];;;{
-    type = internal/cpu
+[module/lan]
+type      = internal/network
+interface = enp3s0
 
-    label =  %percentage%
-    format = <label> <bar-load>
+padding-left  = 2
+padding-right = 2
 
-    bar-load-format = %empty%%fill%
-    bar-load-width = 8
+label-disconnected = %ifname% not connected
 
-    bar-load-fill = ${bars.bar_fill}
-    bar-load-fill-foreground = ${colors.color1}
+label-connected-foreground    = ${colors.color3}
+label-disconnected-foreground = ${colors.color3l}
 
-    bar-load-empty = ${bars.bar_empty}
-    bar-load-empty-foreground = ${colors.color1l}
-;;;}
 
-[module/memory];;;{
-    type = internal/memory
-    interval = 1
 
-    padding-left = 2
-    padding-right = 2
+[module/wlan]
+type      = internal/network
+interface = wlp2s0
 
-    format = <label> <bar-used>
-    format-foreground = ${colors.color2}
+padding-left  = 2
+padding-right = 2
 
-    label =  %gb_used%
+label-disconnected = %ifname% not connected
 
-    bar-used-format = %empty%%fill%
-    bar-used-width = 8
-    bar-used-foreground-0 = ${colors.color2}
-    bar-used-foreground-1 = ${colors.color2}
-    bar-used-foreground-2 = ${colors.color3}
-    bar-used-foreground-3 = ${colors.color1}
-    bar-used-fill = ${bars.bar_fill}
-    bar-used-empty = ${bars.bar_empty}
-    bar-used-empty-foreground = ${colors.color2l}
-;;;}
+label-connected-foreground    = ${colors.color3}
+label-disconnected-foreground = ${colors.color3l}
 
-[module/volume];;;{
-    type = internal/volume
 
-    padding-left = 2
-    padding-right = 2
 
-    master-mixer = Master
-    mapping = true
+[module/cpu_temp]
+type     = internal/temperature
+interval = 1
 
-    format-muted  = <label-muted> <bar-volume>
-    format-volume = <label-volume> <bar-volume>
-    format-foreground = ${colors.color3}
+thermal-zone = 0
 
-    label-volume =  %percentage%
-    label-muted =  muted
-    label-volume-foreground = ${colors.color3}
-    label-muted-foreground = ${colors.color3}
+padding-left = 4
 
-    bar-volume-width = 8
-    bar-volume-format = %fill%%empty%
-    bar-volume-fill = ${bars.bar_fill}
-    bar-volume-empty = ${bars.bar_empty}
-    bar-volume-fill-foreground = ${colors.color3}
-    bar-volume-empty-foreground = ${colors.color3l}
-;;;}
+format       = <ramp> <label>
+;format-warn = <ramp> <label>
 
-[module/mpd];;;{
-    type = internal/mpd
-    interval = 1
+label-warn-foreground = ${colors.color1} " "
 
-    padding-right = 2
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
 
-    host = 127.0.0.1
-    port = 6600
 
-    format-online-foreground = ${colors.color3}
-    format-online = <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> <label-time>  <label-song>
 
-    label-song = %artist% - %title%
+[module/cpu]
+type = internal/cpu
+interval = 0.5
 
-    icon-play   = 
-    icon-pause  = 
-    icon-stop   = 
-    icon-prev   = 
-    icon-next   = 
-    icon-seekb  = 
-    icon-seekf  = 
-    icon-random = 
-    icon-repeat = 
+label  =   %percentage%
+format = <label> <bar-load>
 
-    bar-progress-width = 15
-    bar-progress-indicator = ◉
-    bar-progress-fill = ━
-    bar-progress-empty = ─
-;;;}
+bar-load-format = %empty%%fill%
+bar-load-width  = 8
+bar-load-fill            = ${bars.bar_fill}
+bar-load-fill-foreground = ${colors.color1}
+bar-load-empty            = ${bars.bar_empty}
+bar-load-empty-foreground = ${colors.color1l}
 
-[module/shutdown];;;{
-    type = custom/text
 
-    content = 
-    content-padding = 1
-    content-foreground = ${colors.color1}
 
-    click-left = shutdown -h now
+[module/memory]
+type     = internal/memory
+interval = 1
 
-    maxlen = 1
-;;;}
+padding-left  = 2
+padding-right = 2
 
-[module/reboot];;;{
-    type = custom/text
+format            = <label> <bar-used>
+format-foreground = ${colors.color2}
 
-    content = 
-    content-padding = 1
-    content-foreground = ${colors.color3}
+label =  %gb_used%
 
-    click-left = reboot
+bar-used-format           = %empty%%fill%
+bar-used-width            = 8
+bar-used-foreground-0     = ${colors.color2}
+bar-used-foreground-1     = ${colors.color2}
+bar-used-foreground-2     = ${colors.color3}
+bar-used-foreground-3     = ${colors.color1}
+bar-used-fill             = ${bars.bar_fill}
+bar-used-empty            = ${bars.bar_empty}
+bar-used-empty-foreground = ${colors.color2l}
 
-    maxlen = 1
-;;;}
 
-[module/lock];;;{
-    type = custom/text
 
-    content = 
-    content-padding = 1
-    content-foreground = ${colors.color2}
+[module/volume]
+type = internal/volume
 
-    #click-left = i3lock -c 212121
-    click-left = lock
-    maxlen = 1
-;;;}
+padding-left  = 2
+padding-right = 2
+
+master-mixer = Master
+mapping      = true
+
+format-muted      = <label-muted> <bar-volume>
+format-volume     = <label-volume> <bar-volume>
+format-foreground = ${colors.color3}
+
+label-volume            =  %percentage%
+label-muted             =  muted
+label-volume-foreground = ${colors.color3}
+label-muted-foreground  = ${colors.color3}
+
+bar-volume-width            = 8
+bar-volume-format           = %fill%%empty%
+bar-volume-fill             = ${bars.bar_fill}
+bar-volume-empty            = ${bars.bar_empty}
+bar-volume-fill-foreground  = ${colors.color3}
+bar-volume-empty-foreground = ${colors.color3l}
+
+
+
+[module/mpd]
+type     = internal/mpd
+interval = 1
+
+padding-right = 2
+
+host = 127.0.0.1
+port = 6600
+
+format-online-foreground = ${colors.color3}
+format-online = <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> <label-time>  <label-song>
+
+label-song = %artist% - %title%
+
+icon-play   = 
+icon-pause  = 
+icon-stop   = 
+icon-prev   = 
+icon-next   = 
+icon-seekb  = 
+icon-seekf  = 
+icon-random = 
+icon-repeat = 
+
+bar-progress-width     = 15
+bar-progress-indicator = ◉
+bar-progress-fill      = ━
+bar-progress-empty     = ─
+
+
+
+[module/shutdown]
+type = custom/text
+
+content            = 
+content-padding    = 1
+content-foreground = ${colors.color1}
+
+click-left = shutdown -h now
+
+maxlen = 1
+
+
+
+[module/reboot]
+type = custom/text
+
+content            = 
+content-padding    = 1
+content-foreground = ${colors.color3}
+
+click-left = reboot
+
+maxlen = 1
+
+
+
+[module/lock]
+type = custom/text
+
+content            = 
+content-padding    = 1
+content-foreground = ${colors.color2}
+
+#click-left = i3lock -c 212121
+click-left  = lock
+maxlen      = 1
 
