--- a/.config/i3/polybar/config
+++ b/.config/i3/polybar/config
@@ -1,8 +1,21 @@
+;=====================================================
+;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/jaagr/polybar
+;
+;   The README contains alot of information
+;
+;=====================================================
+
 [colors]
-;background = #282828
-;color1     = #955540
-;color2     = #477893
-;color3     = #BC832C
+;background = #222
+background-alt = #444
+foreground = #dfdfdf
+foreground-alt = #55
+primary = #ffb52a
+secondary = #e60053
+alert = #bd2c40
+
 background  = #3c3836
 color1      = #e74c3c
 color1l     = #40955540
@@ -13,366 +26,361 @@ color3l     = #40BC832C
 color4      = #689d6a
 color4l     = #8ec07c
 
+[global/wm]
+margin-top = 5
+margin-bottom = 5
 
+[bar/example]
+monitor = LVDS1
+;monitor = ${env:MONITOR:HDMI-1}
+width = 100%
+height = 27
+offset-x = 0
+offset-y = 0
 
-[bars]
-bar_fill  = ●
-bar_empty = ○
-
-
-
-[bar/top_bar]
-monitor  = LVDS1
-;monitor = HDMI1
-
-spacing = 4
-width  = 100%
-height = 20
-
+;background = ${xrdb:color9}
 background = ${colors.background}
-foreground = ${colors.color1}
+foreground = ${colors.foreground}
 
-padding-left  = 1
-padding-right = 1
+overline-size = 2
+overline-color = #f00
+underline-size = 2
+underline-color = #00f
 
-top = true
+border-bottom-size = 2
+border-bottom-color = #333
 
-font-0 = Hack:style=Regular:size=8:dpi=138;0
-font-1 = FontAwesome:size=8:dpi=138;0
+padding-left = 0
+padding-right = 2
+module-margin-left = 1
+module-margin-right = 2
 
-tray-background = ${colors.background}
-tray-position   = right
-tray-maxsize    = 28
+font-0 = fixed:pixelsize=10;0
+font-1 = unifont:size=6:heavy:fontformat=truetype;-2
+font-2 = siji:pixelsize=10;0
 
-;modules-right  = lan wlan filesystem date
-modules-right   = filesystem date
-;modules-center = i3
-modules-left    = shutdown reboot lock i3
+modules-left = bspwm i3
+;modules-left = bspwm i3 xwindow
+modules-center =
+modules-right = volume memory cpu wlan eth battery temperature date
+;modules-right = backlight volume xkeyboard memory cpu wlan eth battery temperature date powermenu
 
-enable-ipc = true
+tray-position = right
+tray-padding = 2
+;tray-transparent = true
+;tray-background = #0063ff
 
+;wm-restack = bspwm
+;wm-restack = i3
 
+;override-redirect = true
 
-[module/date]
-type = internal/date
+;scroll-up = bspwm-desknext
+;scroll-down = bspwm-deskprev
 
-interval = 1.0
-
-date     = %%{F#477893}%d/%m/%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
-;date     = %%{F#90477893}%d-%m-%Y%%{F#FF} %%{F#477893}%H:%M:%S%%{F#FF}
-;date     = %%{F#FBA922}%A%%{F#FF}, %d %B %Y  %H:%M:%S
-
-format            =   <date>
-format-foreground = ${colors.color2}
-
-
-
-[module/i3]
-type   = internal/i3
-
-format = <label-state>
-
-enable-click  = true
-enable-scroll = true
-index-sort    = true
-;pin-workspaces = true
-;strip-wsnumbers = false
-
-;label-focused = %index%
-label-focused-background = #008fff
-label-focused-foreground = #ffffff
-label-focused-padding    = 4
-;label-focused-underline = #fba922
-
-;label-unfocused = %index%
-;label-unfocused-background =
-label-unfocused-foreground  = ${colors.color4}
-label-unfocused-padding     = 4
-
-;label-urgent = %index%!
-label-urgent-background = #bd2c40
-label-urgent-foreground = #000000
-label-urgent-padding    = 4
-
-;label-visible = %index%
-label-visible-padding    = 4
-label-visible-foreground = #55
-;label-visible-underline = #555555
-
-;label-focused            = %icon%
-;label-focused-foreground = ${colors.color2}
-;label-focused-padding    = 2
-
-;label-unfocused            = %icon%
-;label-unfocused-foreground = ${colors.color2l}
-;label-unfocused-padding    = 1
-
-;label-urgent            = %icon%
-;label-urgent-foreground = ${colors.color3}
-;label-urgent-padding    = 1
-
-;ws-icon-0 = 1; term
-;ws-icon-1 = 2; www
-;ws-icon-2 = 3; code
-;ws-icon-3 = 4; andr
-;ws-icon-4 = 5; tgrm
-;ws-icon-default = 
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
 
 
+[module/xwindow]
+type = internal/xwindow
+label = %title:0:30:...%
+
+[module/xkeyboard]
+type = internal/xkeyboard
+blacklist-0 = num lock
+label-layout = %{F#55}%{F-} %layout%
+label-layout-underline = ${colors.secondary}
+label-indicator-padding = 2
+label-indicator-margin = 1
+label-indicator-background = ${colors.secondary}
+label-indicator-underline = ${colors.secondary}
 
 [module/filesystem]
 type = internal/fs
 interval = 25
 
 mount-0 = /
-;mount-1 = /home
-;mount-2 = /invalid/mountpoint
+mount-1 = /home
+mount-2 = /invalid/mountpoint
 
-;fixed-values = true
-spacing = 4
-
-label-mounted = %mountpoint% %free%
+label-mounted = %mountpoint%: %percentage_free%
 
 label-unmounted = %mountpoint%: not mounted
-label-unmounted-foreground = #55
+label-unmounted-foreground = ${colors.foreground-alt}
 
+[module/bspwm]
+type = internal/bspwm
 
+label-focused = %index%
+label-focused-background = ${colors.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 2
 
-[module/battery]
-type = internal/battery
+label-occupied = %index%
+label-occupied-padding = 2
 
-battery = BAT1
-adapter = ADP1
+label-urgent = %index%!
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 2
 
-poll-interval = 5
+label-empty = %index%
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 2
 
-padding-left       = 2
-format-charging    = <ramp-capacity> <label-charging>
-format-discharging = <ramp-capacity> <label-discharging>
-format-full        = <ramp-capacity> <label-full>
+[module/i3]
+type = internal/i3
+format = <label-state>
+;format = <label-state> <label-mode>
+enable-click    = true
+enable-scroll   = true
+index-sort      = true
+;wrapping-scroll = false
 
-format-foreground             = ${colors.color4}
-format-charging-foreground    = ${colors.color4}
-format-discharging-foreground = ${colors.color4}
-format-full-foreground        = ${colors.color4}
+;label-mode-padding = 2
+;label-mode-foreground = #000
+;label-mode-background = ${colors.primary}
 
-label-charging =  %percentage%
-label-full     =  %percentage%
+label-focused-background   = #008fff
+label-focused-foreground   = #ffffff
+label-focused-padding      = 4
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+;label-focused = %index%
+;label-focused-background = ${module/bspwm.label-focused-background}
+;label-focused-underline = ${module/bspwm.label-focused-underline}
+;label-focused-padding = ${module/bspwm.label-focused-padding}
 
+label-unfocused-foreground = ${colors.color4}
+label-unfocused-padding    = 4
+;label-unfocused = %index%
+;label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
+label-urgent-background    = #bd2c40
+label-urgent-foreground    = #000000
+label-urgent-padding       = 4
+;label-urgent = %index%!
+;label-urgent-background = ${module/bspwm.label-urgent-background}
+;label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
-[bar/bottom_bar]
-monitor  = LVDS1
-#monitor = HDMI1
+label-visible-foreground   = #55
+label-visible-padding      = 4
+;label-visible = %index%
+;label-visible-background = ${self.label-focused-background}
+;label-visible-underline = ${self.label-focused-underline}
+;label-visible-padding = ${self.label-focused-padding}
 
-spacing = 4
-width  = 100%
-height = 25
+[module/mpd]
+type = internal/mpd
 
-bottom = true
+format-online = <label-song>  <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>
 
-font-0 = ${bar/top_bar.font-0}
-font-1 = ${bar/top_bar.font-1}
+label-song-maxlen = 25
+label-song-ellipsis = true
 
-background = ${colors.background}
-foreground = ${colors.color1}
+icon-prev = 
+icon-seekb = 
+icon-stop = 
+icon-play = 
+icon-pause = 
+icon-next = 
+icon-seekf = 
 
-padding-left  = 2
-padding-right = 2
+icon-random = 
+icon-repeat = 
 
-modules-right  = lan
-modules-center = volume memory cpu cpu_temp battery
-modules-left   = wlan
+toggle-on-foreground = ${colors.primary}
+toggle-off-foreground = #66
 
-enable-ipc = true
+ws-icon-0 = 1; term
+ws-icon-1 = 2; www
+ws-icon-2 = 3; code
+ws-icon-3 = 4; andr
+ws-icon-4 = 5; tgrm
+ws-icon-default = 
 
+[module/backlight]
+type = internal/xbacklight
 
+format = <label> <bar>
+label = BL
 
-[module/lan]
-type      = internal/network
-interface = enp3s0
-
-padding-left  = 2
-padding-right = 2
-
-label-disconnected = %ifname% not connected
-
-label-connected-foreground    = ${colors.color3}
-label-disconnected-foreground = ${colors.color3l}
-
-
-
-[module/wlan]
-type      = internal/network
-interface = wlp2s0
-
-padding-left  = 2
-padding-right = 2
-
-label-disconnected = %ifname% not connected
-
-label-connected-foreground    = ${colors.color3}
-label-disconnected-foreground = ${colors.color3l}
-
-
-
-[module/cpu_temp]
-type     = internal/temperature
-interval = 1
-
-thermal-zone = 0
-
-padding-left = 4
-
-format       = <ramp> <label>
-;format-warn = <ramp> <label>
-
-label-warn-foreground = ${colors.color1} " "
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-
-
+bar-width = 10
+bar-indicator = │
+bar-indicator-foreground = #ff
+bar-indicator-font = 2
+bar-fill = ─
+bar-fill-font = 2
+bar-fill-foreground = #9f78e1
+bar-empty = ─
+bar-empty-font = 2
+bar-empty-foreground = ${colors.foreground-alt}
 
 [module/cpu]
 type = internal/cpu
-interval = 0.5
-
-label  =   %percentage%
-format = <label> <bar-load>
-
-bar-load-format = %empty%%fill%
-bar-load-width  = 8
-bar-load-fill            = ${bars.bar_fill}
-bar-load-fill-foreground = ${colors.color1}
-bar-load-empty            = ${bars.bar_empty}
-bar-load-empty-foreground = ${colors.color1l}
-
-
+interval = 2
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #f90000
+label = %percentage%
 
 [module/memory]
-type     = internal/memory
-interval = 1
+type = internal/memory
+interval = 2
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #4bffdc
+label = %percentage_used%
 
-padding-left  = 2
-padding-right = 2
+[module/wlan]
+type = internal/network
+interface = wlp2s0
+interval = 3.0
 
-format            = <label> <bar-used>
-format-foreground = ${colors.color2}
+format-connected = <ramp-signal> <label-connected>
+format-connected-underline = #9f78e1
+format-disconnected-underline = ${self.format-connected-underline}
 
-label =  %gb_used%
+label-connected = %essid%
+label-disconnected = %ifname% disconnected
+label-disconnected-foreground = ${colors.foreground-alt}
 
-bar-used-format           = %empty%%fill%
-bar-used-width            = 8
-bar-used-foreground-0     = ${colors.color2}
-bar-used-foreground-1     = ${colors.color2}
-bar-used-foreground-2     = ${colors.color3}
-bar-used-foreground-3     = ${colors.color1}
-bar-used-fill             = ${bars.bar_fill}
-bar-used-empty            = ${bars.bar_empty}
-bar-used-empty-foreground = ${colors.color2l}
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+ramp-signal-foreground = ${colors.foreground-alt}
 
+[module/eth]
+type = internal/network
+interface = enp3s0
+interval = 3.0
 
+format-connected-underline = #55aa55
+format-connected-prefix = " "
+format-connected-foreground-foreground = ${colors.foreground-alt}
+label-connected = %local_ip%
+
+format-disconnected-underline = ${self.format-connected-underline}
+label-disconnected = %ifname% disconnected
+label-disconnected-foreground = ${colors.foreground-alt}
+
+[module/date]
+type = internal/date
+interval = 5
+
+date = " %Y-%m-%d"
+date-alt = " %Y-%m-%d"
+
+time = %H:%M:%S
+time-alt = %H:%M:%S
+
+format-prefix = 
+format-prefix-foreground = ${colors.foreground-alt}
+format-underline = #0a6cf5
+
+label = %date% %time%
 
 [module/volume]
 type = internal/volume
 
-padding-left  = 2
-padding-right = 2
+format-volume = <label-volume> <bar-volume>
+label-volume = VOL
+label-volume-foreground = ${root.foreground}
 
-master-mixer = Master
-mapping      = true
+format-muted-prefix = " "
+format-muted-foreground = ${colors.foreground-alt}
+label-muted = sound muted
 
-format-muted      = <label-muted> <bar-volume>
-format-volume     = <label-volume> <bar-volume>
-format-foreground = ${colors.color3}
+bar-volume-width = 10
+bar-volume-foreground-0 = #55aa55
+bar-volume-foreground-1 = #55aa55
+bar-volume-foreground-2 = #55aa55
+bar-volume-foreground-3 = #55aa55
+bar-volume-foreground-4 = #55aa55
+bar-volume-foreground-5 = #f5a70a
+bar-volume-foreground-6 = #ff5555
+bar-volume-gradient = false
+bar-volume-indicator = │
+bar-volume-indicator-font = 2
+bar-volume-indicator-foreground = #ff
+bar-volume-fill = ─
+bar-volume-fill-font = 2
+bar-volume-empty = ─
+bar-volume-empty-font = 2
+bar-volume-empty-foreground = ${colors.foreground-alt}
 
-label-volume            =  %percentage%
-label-muted             =  muted
-label-volume-foreground = ${colors.color3}
-label-muted-foreground  = ${colors.color3}
+[module/battery]
+type = internal/battery
+battery = BAT1
+adapter = ADP1
+full-at = 98
 
-bar-volume-width            = 8
-bar-volume-format           = %fill%%empty%
-bar-volume-fill             = ${bars.bar_fill}
-bar-volume-empty            = ${bars.bar_empty}
-bar-volume-fill-foreground  = ${colors.color3}
-bar-volume-empty-foreground = ${colors.color3l}
+format-charging = <animation-charging> <label-charging>
+format-charging-underline = #ffb52a
 
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-underline = ${self.format-charging-underline}
 
+format-full-prefix = " "
+format-full-prefix-foreground = ${colors.foreground-alt}
+format-full-underline = ${self.format-charging-underline}
 
-[module/mpd]
-type     = internal/mpd
-interval = 1
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-foreground = ${colors.foreground-alt}
 
-padding-right = 2
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-foreground = ${colors.foreground-alt}
+animation-charging-framerate = 750
 
-host = 127.0.0.1
-port = 6600
+[module/temperature]
+type = internal/temperature
+thermal-zone = 0
+warn-temperature = 60
 
-format-online-foreground = ${colors.color3}
-format-online = <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> <label-time>  <label-song>
+format = <ramp> <label>
+format-underline = #f50a4d
+format-warn = <ramp> <label-warn>
+format-warn-underline = ${self.format-underline}
 
-label-song = %artist% - %title%
+label = %temperature%
+label-warn = %temperature%
+label-warn-foreground = ${colors.secondary}
 
-icon-play   = 
-icon-pause  = 
-icon-stop   = 
-icon-prev   = 
-icon-next   = 
-icon-seekb  = 
-icon-seekf  = 
-icon-random = 
-icon-repeat = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-foreground = ${colors.foreground-alt}
 
-bar-progress-width     = 15
-bar-progress-indicator = ◉
-bar-progress-fill      = ━
-bar-progress-empty     = ─
+[module/powermenu]
+type = custom/menu
 
+format-spacing = 1
 
+label-open =  power
+label-open-foreground = ${colors.secondary}
+label-close =  cancel
+label-close-foreground = ${colors.secondary}
+label-separator = |
+label-separator-foreground = ${colors.foreground-alt}
 
-[module/shutdown]
-type = custom/text
+menu-0-0 = reboot
+menu-0-0-exec = menu-open-1
+menu-0-1 = power off
+menu-0-1-exec = menu-open-2
 
-content            = 
-content-padding    = 1
-content-foreground = ${colors.color1}
+menu-1-0 = cancel
+menu-1-0-exec = menu-open-0
+menu-1-1 = reboot
+menu-1-1-exec = sudo reboot
 
-click-left = shutdown -h now
+menu-2-0 = power off
+menu-2-0-exec = sudo poweroff
+menu-2-1 = cancel
+menu-2-1-exec = menu-open-0
 
-maxlen = 1
-
-
-
-[module/reboot]
-type = custom/text
-
-content            = 
-content-padding    = 1
-content-foreground = ${colors.color3}
-
-click-left = reboot
-
-maxlen = 1
-
-
-
-[module/lock]
-type = custom/text
-
-content            = 
-content-padding    = 1
-content-foreground = ${colors.color2}
-
-#click-left = i3lock -c 212121
-click-left  = lock
-maxlen      = 1
-
+; vim:ft=dosini
