--- a/.config/i3/config
+++ b/.config/i3/config
@@ -294,7 +294,7 @@ hide_edge_borders both
 
 # Other Keybindings
 
-# bindsym $mod+shift+x exec i3lock-fancy -g -f Office Source Code Pro
+bindsym $mod+shift+Return exec lock
 # bindsym $mod+u exec scrot
 # bindsym $mod+z exec xrdb ~/.Xresources
 
@@ -313,13 +313,11 @@ bindsym XF86AudioPrev exec playerctl previous
 
 # Start up
 
-#exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/wallpaper/Desktop-pictures-pokemon-wallpapers-pokemon-wallpaper-image-28.jpg
-#exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/wallpaper/gfoHjw6.jpg
 #exec --no-startup-id pulseaudio --start
 #exec --no-startup-id setxkbmap -option ctrl:swapcaps
 #exec --no-startup-id yabar
 exec --no-startup-id dropbox start
-exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/wallpaper/0dWI3hG.jpg
+exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/wallpaper/pokemon2.jpg
 exec --no-startup-id wicd -gtk -t
 exec --no-startup-id xset r rate 200 60
 exec --no-startup-id ~/.config/i3/polybar/launch.sh
