--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -155,19 +155,27 @@ ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has libreoffice, X, f
 ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has soffice,     X, flag f = soffice "$@"
 ext pptx?|od[dfgpst]|docx?|sxc|xlsx?|xlt|xlw|gnm|gnumeric, has ooffice,     X, flag f = ooffice "$@"
 
+ext djvu, has zathura,X, flag f = zathura -- "$@"
 ext djvu, has evince, X, flag f = evince -- "$@"
 ext djvu, has atril,  X, flag f = atril -- "$@"
 
 #-------------------------------------------
 # Image Viewing:
 #-------------------------------------------
+mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
+mime ^image/svg, has display,  X, flag f = display -- "$@"
+mime ^image/gif, has mpv, X, flag f = mpv --loop -- "$@"
+mime ^image/gif, has viewnior, X, flag f = viewnior -- "$@"
+mime ^image/gif, has qutebrowser, X, flag f = qutebrowser -- "$@"
+
 mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
-mime ^image, has feh,       X, flag f = feh -- "$@"
+mime ^image, has feh,       X, flag f = feh --scale-down --auto-zoom -- "$@"
 mime ^image, has mirage,    X, flag f = mirage -- "$@"
 mime ^image, has ristretto, X, flag f = ristretto "$@"
 mime ^image, has eog,       X, flag f = eog -- "$@"
 mime ^image, has eom,       X, flag f = eom -- "$@"
 mime ^image, has gimp,      X, flag f = gimp -- "$@"
+mime ^image, has pinta,	    X, flag f = pinta -- "$@"
 ext xcf,                    X, flag f = gimp -- "$@"
 
 #-------------------------------------------
