--- a/.config/i3/config
+++ b/.config/i3/config
@@ -155,11 +155,11 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace0
 
-assign [class ="Firefox"] $workspace0
+assign [class="Chromium-browser|Firefox|qutebrowser"] $workspace0
 assign [class="Nautilus"] $workspace3
-assign [class ="vlc"] $workspace6
-assign [class ="Skype"] $workspace7
-assign [class ="Steam"] $workspace9
+assign [class="Totem|mpv|vlc"] $workspace6
+assign [class="Skype"] $workspace7
+assign [class="Steam"] $workspace9
 for_window [class="^.*"] border pixel 5
 for_window [class="Spotify"] move to workspace $workspace8
 
